--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="domain-status">
                     <span class="name"> QQ交流群</span>
                     <div class="status-and-link">
-                        <span class="app-status">免费软件资源交流群</span>
+                        <span class="app-status">安卓软件交流群</span>
                         <a href="https://qm.qq.com/q/cq2YZkET7O" class="app-link">加入</a>
                     </div>
                 </div>
@@ -76,6 +76,35 @@
                 <!-- 代码分割线 -->
             </div>
             <!-- 代码分割线 -->
+                        <!-- 代码分割线 -->
+                        <div class="app-download-domain">
+                            <!-- 代码分割线 -->
+                            <div class="domain-status">
+                                <span class="name">时光电视TV</span>
+                                <div class="status-and-link">
+                                    <span class="app-status">免费电视直播app</span>
+                                    <a href="https://api.suxun.site/api/lanzou?url=https://gobanfans.lanzoub.com/i8nNX2d2lcne&type=down" class="app-link">下载</a>
+                                </div>
+                            </div>
+                            <!-- 代码分割线 -->
+                            <div class="domain-status">
+                                <span class="name">TVBOX订阅接口</span>
+                                <div class="status-and-link">
+                                    <span class="app-status">免费软件资源交流群</span>
+                                    <a href="TVBOX/index.html" class="app-link">查看</a>
+                                </div>
+                            </div>
+                            <!-- 代码分割线 -->
+                            <div class="domain-status">
+                                <span class="name">低价大流量卡</span>
+                                <div class="status-and-link">
+                                    <span class="app-status">高速大流量卡，0元包邮到家！</span>
+                                    <a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111" class="app-link">查看</a>
+                                </div>
+                            </div>
+                            <!-- 代码分割线 -->
+                        </div>
+                        <!-- 代码分割线 -->
             <div class="content">
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
                     ✅原创破解和收集整理花费大量时间精力，不为爱发电，想白嫖优质资源的不要浪费时间加群了。
@@ -110,10 +139,6 @@
             <div>
                 <p style="text-align: center;">
                     - 友情链接 -<br />
-                    <strong><a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111"
-                            style="color: #e97387">低价高速大流量卡，0元免费包邮到家！</a></strong><br />
-                    <a href="https://github.com/bin1site1/bin1site1.github.io" style="color: #a73ff6">Github项目地址</a> |
-                    <a href="TVBOX/index.html" style="color: #4696f9">TVBOX接口订阅</a><br />
                     <a href="https://www.microsoft.com/zh-cn/software-download/windows11" style="color: #f98b46">Windows
                         11 官方下载</a> |
                     <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a>
