--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <div class="domain-status">
                                 <span class="name">TVBOX订阅接口</span>
                                 <div class="status-and-link">
-                                    <span class="app-status">免费软件资源交流群</span>
+                                    <span class="app-status">tvbox订阅接口集合</span>
                                     <a href="TVBOX/index.html" class="app-link">查看</a>
                                 </div>
                             </div>
