--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                     <div class="list-main">
                         <div class="list-content">
                             <h4>赞助成员群（赞助¥50）</h4>
-                            <p>安卓软件、Windows软件、Windows密钥、Office密钥、VPN代理软件、软件激活码、教程资料 等。</p>
+                            <p>安卓软件、Windows软件、Windows密钥、Office密钥、VPN软件、软件激活码、教程资料 等。</p>
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
-                            <p>软件质量低资源少，随时清理不活跃成员，群人数上限500人，人满时需等待空位。</p>
+                            <p>质量低、资源少，随时清理不活跃成员，群人数上限500人，人满时需等待空位。</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
