--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 设置视口适应设备宽度 -->
-    <meta name="description" content="时光忘忧·导航"> <!-- 设置页面描述 -->
-    <meta name="keywords" content="时光忘忧,导航,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
+    <meta name="description" content="Mod@Kalvin·导航"> <!-- 设置页面描述 -->
+    <meta name="keywords" content="Mod@Kalvin,导航,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
     <meta name="author" content="bin1"> <!-- 设置作者 -->
     <meta name="robots" content="index,follow"> <!-- 设置搜索引擎抓取 -->
     <meta name="googlebot" content="index,follow"> <!-- 设置谷歌搜索引擎抓取 -->
@@ -14,7 +14,7 @@
     <meta name="yandex" content="index,follow"> <!-- 设置雅虎搜索引擎抓取 -->
     <meta name="baidu" content="index,follow"> <!-- 设置百度搜索引擎抓取 -->
     <meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
-    <title>@𝐿𝑜𝑡𝑢𝑠_𝑀𝑜𝑑 - 个人主页</title> <!-- 设置页面标题 -->
+    <title>@Kalvin个人主页</title> <!-- 设置页面标题 -->
     <link rel="icon" href="IMG/logo.png"> <!-- 设置网页图标 -->
     <link rel="stylesheet" href="CSS/style.css"> <!-- 链接外部样式表 -->
     <script src="js/Sitetime.js"></script><!-- 运行时间 -->
@@ -25,7 +25,7 @@
     <div class="main">
         <div class="logo"><img src="IMG/logo.png" class="hover-zoom" onclick="location.reload();"></div>
         <div class="title" style="text-align: center; font-size: 20px;  color: #fc8ec9;">
-            <h3>@𝐿𝑜𝑡𝑢𝑠_𝑀𝑜𝑑</h3>
+            <h3>@Kalvin</h3>
         </div>
         <!-- 代码分割线 -->
         <div style="text-align: center;">
@@ -44,7 +44,7 @@
         <!-- 代码分割线 -->
         <div class="box">
             <div class="content">
-                <p>这里是 <a>@𝐿𝑜𝑡𝑢𝑠_𝑀𝑜𝑑</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
+                <p>这里是 <a>@Kalvin</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
                 </p>
             </div>
             <!-- 代码分割线 -->
@@ -146,7 +146,7 @@
             </div>
             <br />
             <span id="sitetime"></span> <!-- 运行时间 --></br>
-            Copyright ©𝐿𝑜𝑡𝑢𝑠_𝑀𝑜𝑑. 2022
+            Copyright @Kalvin. 2022
             <script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
         </footer> <!-- 定义页脚部分 -->
         <!--代码分割线-->
