--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
-                            <p>加入普通成员QQ群后私信群主完成赞助拉入赞助群。（已持续更新时长超过两年半）</p>
+                            <p>加入普通成员QQ群后私信群主完成赞助拉入赞助群。</p>
                         </div>
                     </div>
                 </div>
