--- a/index.html
+++ b/index.html
@@ -76,35 +76,6 @@
                 <!-- 代码分割线 -->
             </div>
             <!-- 代码分割线 -->
-                        <!-- 代码分割线 -->
-                        <div class="app-download-domain">
-                            <!-- 代码分割线 -->
-                            <div class="domain-status">
-                                <span class="name">时光电视TV</span>
-                                <div class="status-and-link">
-                                    <span class="app-status">免费电视直播app</span>
-                                    <a href="https://api.suxun.site/api/lanzou?url=https://gobanfans.lanzoub.com/i8nNX2d2lcne&type=down" class="app-link">下载</a>
-                                </div>
-                            </div>
-                            <!-- 代码分割线 -->
-                            <div class="domain-status">
-                                <span class="name">TVBOX订阅接口</span>
-                                <div class="status-and-link">
-                                    <span class="app-status">tvbox订阅接口集合</span>
-                                    <a href="TVBOX/index.html" class="app-link">查看</a>
-                                </div>
-                            </div>
-                            <!-- 代码分割线 -->
-                            <div class="domain-status">
-                                <span class="name">低价大流量卡</span>
-                                <div class="status-and-link">
-                                    <span class="app-status">高速大流量卡，0元包邮到家！</span>
-                                    <a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111" class="app-link">查看</a>
-                                </div>
-                            </div>
-                            <!-- 代码分割线 -->
-                        </div>
-                        <!-- 代码分割线 -->
             <div class="content">
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
                     ✅原创破解和收集整理花费大量时间精力，不为爱发电，想白嫖优质资源的不要浪费时间加群了。
@@ -141,7 +112,10 @@
                     - 友情链接 -<br />
                     <a href="https://www.microsoft.com/zh-cn/software-download/windows11" style="color: #f98b46">Windows
                         11 官方下载</a> |
-                    <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a>
+                    <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a> </p>
+                    <a href="TVBOX/index.html" style="color: #1954f8">TVBOX订阅接口</a> |
+                    <a href="https://api.suxun.site/api/lanzou?url=https://gobanfans.lanzoub.com/i8nNX2d2lcne&type=down" style="color: #b919f8">免费电视直播app</a> </p>
+                    <a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111" style="color: #f81919">低价大流量卡</a> 
                 </p>
             </div>
             <br />
