--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <!-- 代码分割线 -->
             <div class="content">
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
-                    ✅原创破解和收集整理花费大量时间精力，不为爱发电，想白嫖优质资源的不要浪费时间加群了。
+                    ✅原创破解和收集花费大量时间精力，不为爱发电。
                     <br />
                     ✅加入群聊务必第一时间仔细<a>阅读群公告</a>，发布讨论违法违规内容将被永久拉黑踢出群。
                 </p>
