--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="list-main">
                         <div class="list-content">
                             <h4>赞助成员群（赞助¥50）</h4>
-                            <p>安卓软件、Windows软件、Windows/Office密钥、VPN软件、软件激活码、教程学习资料、软件库app资源合集等。</p>
+                            <p>安卓软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库app资源合集等。</p>
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
