--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span class="name">Tencent频道</span>
                     <div class="status-and-link">
                         <span class="app-status">安卓软件互动交流社区</span>
-                        <a href="https://pd.qq.com/s/1oqtpdvbd" class="app-link">加入</a>
+                        <a href="https://pd.qq.com/s/9oir7qw0g" class="app-link">加入</a>
                     </div>
                 </div>
                 <!-- 代码分割线 -->
