--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                 <div class="domain-status">
                     <span class="name">Tencent频道</span>
                     <div class="status-and-link">
-                        <span class="app-status">安卓软件互动交流社区</span>
+                        <span class="app-status">交流社群（含QQ交流群）</span>
                         <a href="https://pd.qq.com/s/9oir7qw0g" class="app-link">加入</a>
                     </div>
                 </div>
                 <!-- 代码分割线 -->
                 <div class="domain-status">
-                    <span class="name"> QQ交流群</span>
+                    <span class="name"> Telegram频道</span>
                     <div class="status-and-link">
-                        <span class="app-status">安卓软件交流群</span>
-                        <a href="https://qm.qq.com/q/cq2YZkET7O" class="app-link">加入</a>
+                        <span class="app-status">TG电报频道（需翻墙）</span>
+                        <a href="https://t.me/KalvinMod" class="app-link">加入</a>
                     </div>
                 </div>
                 <!-- 代码分割线 -->
