--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
                     ✅原创破解和收集花费大量时间精力，不为爱发电。
                     <br />
-                    ✅加入群聊务必第一时间仔细<a>阅读群公告</a>，发布讨论违法违规内容将被永久拉黑踢出群。
+                    ✅加入群聊第一时间<a>阅读群公告</a>，避免违规被踢出群。
                 </p>
                 <div class="list">
                     <div class="list-main">
@@ -90,11 +90,11 @@
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
-                            <p>质量低、资源少，随时清理不活跃成员，群人数上限500人，人满时需等待空位。</p>
+                            <p>质量低、资源少，随时清理不活跃成员，群人数上限500，人满时需等待空位。</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
-                            <p>加入普通成员QQ群后私信群主完成赞助拉入赞助群。</p>
+                            <p>Tencent频道详情中查看加入普通成员QQ群后私信群主完成赞助拉入赞助群。</p>
                         </div>
                     </div>
                 </div>
