--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
-                            <p>Tencent频道详情中查看加入普通成员QQ群后私信群主完成赞助拉入赞助群。</p>
+                            <p>Tencent频道查看频道详情加入普通成员QQ群后私信群主完成赞助拉入赞助群。</p>
                         </div>
                     </div>
                 </div>
