--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="domain-status">
                     <span class="name">Tencent频道</span>
                     <div class="status-and-link">
-                        <span class="app-status">交流社群（含QQ交流群）</span>
+                        <span class="app-status">交流社区与交流群</span>
                         <a href="https://pd.qq.com/s/9oir7qw0g" class="app-link">加入</a>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
                     ✅原创破解和收集花费大量时间精力，不为爱发电。
                     <br />
-                    ✅加入群聊第一时间<a>阅读群公告</a>，避免违规被踢出群。
+                    ✅加入频道第一时间<a>公告</a>，避免违规被踢出频道。
                 </p>
                 <div class="list">
                     <div class="list-main">
@@ -89,12 +89,12 @@
                             <p>安卓软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库app资源合集等。</p>
                         </div>
                         <div class="list-content">
-                            <h4>普通成员群（免费）</h4>
-                            <p>质量低、资源少，随时清理不活跃成员，群人数上限500，人满时需等待空位。</p>
+                            <h4>普通频道交流群</h4>
+                            <p>质量低、资源少</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
-                            <p>Tencent频道查看频道详情加入普通成员QQ群后私信群主完成赞助拉入赞助群。</p>
+                            <p>QQ频道私信频道主完成赞助拉入赞助群。</p>
                         </div>
                     </div>
                 </div>
