--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <span class="name">Email联系我</span>
                     <div class="status-and-link">
                         <span class="app-status">发送邮件反馈与建议</span>
-                        <a href="mailto:3295532395@qq.com" class="app-link">发送</a>
+                        <a href="mailto:246822487@qq.com" class="app-link">发送</a>
                     </div>
                 </div>
                 <!-- 代码分割线 -->
@@ -90,7 +90,7 @@
                         </div>
                         <div class="list-content">
                             <h4>普通频道交流群</h4>
-                            <p>质量低、资源少</p>
+                            <p>纯交流社群，无资源分享!</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
@@ -112,10 +112,7 @@
                     - 友情链接 -<br />
                     <a href="https://www.microsoft.com/zh-cn/software-download/windows11" style="color: #f98b46">Windows
                         11 官方下载</a> |
-                    <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a> </p>
-                    <a href="TVBOX/index.html" style="color: #1954f8">TVBOX订阅接口</a> |
-                    <a href="https://api.suxun.site/api/lanzou?url=https://gobanfans.lanzoub.com/i8nNX2d2lcne&type=down" style="color: #b919f8">免费电视直播app</a> </p>
-                    <a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111" style="color: #f81919">低价大流量卡</a> 
+                    <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a>
                 </p>
             </div>
             <br />
