--- a/index.html
+++ b/index.html
@@ -59,14 +59,6 @@
                 </div>
                 <!-- 代码分割线 -->
                 <div class="domain-status">
-                    <span class="name"> Telegram频道</span>
-                    <div class="status-and-link">
-                        <span class="app-status">TG电报频道（需翻墙）</span>
-                        <a href="https://t.me/KalvinMod" class="app-link">加入</a>
-                    </div>
-                </div>
-                <!-- 代码分割线 -->
-                <div class="domain-status">
                     <span class="name">Email联系我</span>
                     <div class="status-and-link">
                         <span class="app-status">发送邮件反馈与建议</span>
@@ -74,6 +66,15 @@
                     </div>
                 </div>
                 <!-- 代码分割线 -->
+                <!-- 代码分割线 -->
+                <div class="domain-status">
+                    <span class="name"> tvbox订阅</span>
+                    <div class="status-and-link">
+                        <span class="app-status">打开后复制网址使用</span>
+                        <a href="https://gitee.com/KalvinMod/bin1site.gitee.io/raw/main/tvbox/OS.json"
+                            class="app-link">打开</a>
+                    </div>
+                </div>
             </div>
             <!-- 代码分割线 -->
             <div class="content">
