--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> <!-- 声明文档类型为 HTML5 -->
+<html> <!-- HTML 文档的根元素 -->
 
-<head>
+<head> <!-- 文档头部，包含元数据和资源引用 -->
     <meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 设置视口适应设备宽度 -->
     <meta name="description" content="Mod@Kalvin·导航"> <!-- 设置页面描述 -->
@@ -17,77 +17,77 @@
     <title>@Kalvin个人主页</title> <!-- 设置页面标题 -->
     <link rel="icon" href="IMG/logo.png"> <!-- 设置网页图标 -->
     <link rel="stylesheet" href="CSS/style.css"> <!-- 链接外部样式表 -->
-    <script src="js/Sitetime.js"></script><!-- 运行时间 -->
-    <script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
+    <script src="js/Sitetime.js"></script><!-- 运行时间脚本 -->
+    <script src="js/sakura-less.js"></script><!-- 花瓣飘落效果脚本 -->
 </head>
 
-<body>
-    <div class="main">
-        <div class="logo"><img src="IMG/logo.png" class="hover-zoom" onclick="location.reload();"></div>
-        <div class="title" style="text-align: center; font-size: 20px;  color: #fc8ec9;">
-            <h3>@Kalvin</h3>
+<body> <!-- 页面主体内容开始 -->
+    <div class="main"> <!-- 主容器 -->
+        <div class="logo"><img src="IMG/logo.png" class="hover-zoom" onclick="location.reload();"></div> <!-- logo图片，点击刷新页面 -->
+        <div class="title" style="text-align: center; font-size: 20px;  color: #fc8ec9;"> <!-- 标题样式 -->
+            <h3>@Kalvin</h3> <!-- 显示用户名 -->
         </div>
         <!-- 代码分割线 -->
-        <div style="text-align: center;">
+        <div style="text-align: center;"> <!-- 居中显示内容 -->
             <script>
                 // 定义一个包含多个标签的数组
                 const tags = ["HTML", "CSS", "JavaScript", "Website", "Wordpress", "C", "Java", "Smali"];
                 // 遍历数组中的每个标签，并将其写入文档中
                 tags.forEach(tag => {
-                    document.write(`<biaoqian>${tag}</biaoqian>`);
+                    document.write(`<biaoqian>${tag}</biaoqian>`); // 输出自定义标签
                     // 定义一个包含多个标签的元素
                 });
-            </script><br></br><!-- 显示标签 -->
-            <colourful-text>长风破浪会有时，直挂云帆济沧海。</colourful-text>
-            <br></br>
+            </script><br></br><!-- 显示标签并换行 -->
+            <colourful-text>长风破浪会有时，直挂云帆济沧海。</colourful-text> <!-- 彩色文本显示名言 -->
+            <br></br> <!-- 换行 -->
         </div>
         <!-- 代码分割线 -->
-        <div class="box">
-            <div class="content">
+        <div class="box"> <!-- 内容盒子 -->
+            <div class="content"> <!-- 内容区域 -->
                 <p>这里是 <a>@Kalvin</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
-                </p>
+                </p> <!-- 主页介绍说明 -->
             </div>
             <!-- 代码分割线 -->
-            <div class="app-download-domain">
+            <div class="app-download-domain"> <!-- 频道和联系方式区域 -->
                 <!-- 代码分割线 -->
-                <div class="domain-status">
-                    <span class="name">Tencent频道</span>
-                    <div class="status-and-link">
-                        <span class="app-status">交流社区与交流群</span>
-                        <a href="https://pd.qq.com/s/9oir7qw0g" class="app-link">加入</a>
+                <div class="domain-status"> <!-- 频道状态块 -->
+                    <span class="name">Tencent频道</span> <!-- 频道名称 -->
+                    <div class="status-and-link"> <!-- 状态和链接 -->
+                        <span class="app-status">交流社区与交流群</span> <!-- 频道说明 -->
+                        <a href="https://pd.qq.com/s/9oir7qw0g" class="app-link">加入</a> <!-- 加入频道链接 -->
                     </div>
                 </div>
                 <!-- 代码分割线 -->
-                <div class="domain-status">
-                    <span class="name">Email联系我</span>
+                <div class="domain-status"> <!-- 邮箱联系块 -->
+                    <span class="name">Email联系我</span> <!-- 联系方式名称 -->
                     <div class="status-and-link">
-                        <span class="app-status">发送邮件反馈与建议</span>
-                        <a href="mailto:246822487@qq.com" class="app-link">发送</a>
+                        <span class="app-status">发送邮件反馈与建议</span> <!-- 联系说明 -->
+                        <a href="mailto:246822487@qq.com" class="app-link">发送</a> <!-- 邮件发送链接 -->
                     </div>
                 </div>
                 <!-- 代码分割线 -->
                 <!-- 代码分割线 -->
-                <div class="domain-status">
-                    <span class="name"> tvbox订阅</span>
+                <div class="domain-status"> <!-- tvbox订阅块 -->
+                    <span class="name"> tvbox订阅</span> <!-- 订阅名称 -->
                     <div class="status-and-link">
-                        <span class="app-status">打开后复制网址使用</span>
+                        <span class="app-status">打开后复制网址使用</span> <!-- 订阅说明 -->
                         <a href="https://gitee.com/KalvinMod/bin1site.gitee.io/raw/main/tvbox/OS.json"
-                            class="app-link">打开</a>
+                            class="app-link">打开</a> <!-- 订阅链接 -->
                     </div>
                 </div>
             </div>
             <!-- 代码分割线 -->
-            <div class="content">
+            <div class="content"> <!-- 交流群说明区域 -->
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
                     ✅原创破解和收集花费大量时间精力，不为爱发电。
                     <br />
                     ✅加入频道第一时间<a>公告</a>，避免违规被踢出频道。
-                </p>
-                <div class="list">
+                </p> <!-- 说明内容 -->
+                <div class="list"> <!-- 群列表区域 -->
                     <div class="list-main">
                         <div class="list-content">
-                            <h4>赞助成员群（赞助¥50）</h4>
-                            <p>安卓软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库app资源合集等。</p>
+                            <h4>赞助成员群（赞助¥50）</h4> <!-- 群名称 -->
+                            <p>安卓软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库app资源合集等。</p> <!-- 群内容说明 -->
                         </div>
                         <div class="list-content">
                             <h4>普通频道交流群</h4>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="content-foot">
+                <div class="content-foot"> <!-- 页脚提示 -->
                     <strong style="color:rgb(243, 143, 196);">
                         此页面长期维护和更新，强烈建议收藏保存！
                     </strong>
@@ -107,22 +107,22 @@
             </div>
         </div>
         <!--代码分割线-->
-        <footer style="text-align: center;">
+        <footer style="text-align: center;"> <!-- 页脚区域 -->
             <div>
                 <p style="text-align: center;">
                     - 友情链接 -<br />
                     <a href="https://www.microsoft.com/zh-cn/software-download/windows11" style="color: #f98b46">Windows
-                        11 官方下载</a> |
-                    <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a>
+                        11 官方下载</a> | <!-- 友情链接1 -->
+                    <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a> <!-- 友情链接2 -->
                 </p>
             </div>
             <br />
-            <span id="sitetime"></span> <!-- 运行时间 --></br>
+            <span id="sitetime"></span> <!-- 运行时间显示 --></br>
             Copyright @Kalvin. 2022
-            <script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
+            <script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved <!-- 显示当前年份 -->
         </footer> <!-- 定义页脚部分 -->
         <!--代码分割线-->
     </div>
 </body>
 
-</html>
+</html> <!-- HTML文档结束 -->
