--- a/TVBOX/index.html
+++ b/TVBOX/index.html
@@ -1,4 +1,4 @@
-<html lang="zh-cn">
+<html lang="zh-cn"> <!-- 设置页面语言为中文 -->
 
 <head>
 	<meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
@@ -13,37 +13,40 @@
 	<meta name="yandex" content="index,follow"> <!-- 设置雅虎搜索引擎抓取 -->
 	<meta name="baidu" content="index,follow"> <!-- 设置百度搜索引擎抓取 -->
 	<meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
-	<title>TVBox订阅源接口展示</title>
-	<link rel="shortcut icon" type="image/x-icon" href="logo.png">
+	<title>TVBox订阅源接口展示</title> <!-- 设置页面标题 -->
+	<link rel="shortcut icon" type="image/x-icon" href="logo.png"> <!-- 设置网站图标 -->
 	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 </head>
 
-<body>
-	<div class="wrapper">
-		<div class="profile-card js-profile-card">
+<body> <!-- 页面主体开始 -->
+	<div class="wrapper"> <!-- 外层容器 -->
+		<div class="profile-card js-profile-card"> <!-- 个人资料卡片容器 -->
 			<!--代码分割线-->
-			<div class="profile-card__img">
-				<img src="logo.png" alt="profile card">
+			<div class="profile-card__img"> <!-- 头像容器 -->
+				<img src="logo.png" alt="profile card"> <!-- 显示logo图片 -->
 			</div>
 			<!--代码分割线-->
-			<div class="profile-card__cnt js-profile-cnt">
-				<div class="">
-					订阅接口收集自网络，如有侵权，请联系主页邮箱删除!</div>
-				<div class="">更新时间：2024.8.17</div>
-				<div class="profile-card-inf">
+			<div class="profile-card__cnt js-profile-cnt"> <!-- 内容容器 -->
+				<div class=""> <!-- 提示信息 -->
+					订阅接口收集自网络，如有侵权，请联系主页邮箱删除!
+				</div>
+				<div class=""> <!-- 更新时间信息 -->
+					更新时间：2024.8.17
+				</div>
+				<div class="profile-card-inf"> <!-- 信息表格容器 -->
 					<!--代码分割线-->
-					<table class="layui-table text-center" lay-size="sm">
-						<thead>
+					<table class="layui-table text-center" lay-size="sm"> <!-- 表格，居中显示，尺寸小 -->
+						<thead> <!-- 表头 -->
 							<tr>
-								<th class="text-center">描述</th>
-								<th class="text-center">接口</th>
+								<th class="text-center">描述</th> <!-- 描述列 -->
+								<th class="text-center">接口</th> <!-- 接口列 -->
 							</tr>
 						</thead>
 						<!--代码分割线-->
-						<tbody>
+						<tbody> <!-- 表格内容 -->
 							<tr>
-								<td>本站单仓</td>
-								<td>https://bin1site1.github.io/tvbox/OS.json</td>
+								<td>本站单仓</td> <!-- 描述 -->
+								<td>https://bin1site1.github.io/tvbox/OS.json</td> <!-- 接口地址 -->
 							</tr>
 							<tr>
 								<td>本站多仓</td>
@@ -77,7 +80,7 @@
 								<td>喵影视</td>
 								<td>http://meowtv.cn/tv</td>
 							</tr>
-						<tbody>
+						<tbody> <!-- 表格内容结束 -->
 							<!--代码分割线-->
 					</table>
 					<!--代码分割线-->
@@ -87,6 +90,6 @@
 		</div>
 	</div>
 
-</body>
+</body> <!-- 页面主体结束 -->
 
-</html>
+</html> <!-- HTML文档结束 -->
