--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 <div class="list"> <!-- 群列表区域 -->
                     <div class="list-main">
                         <div class="list-content">
-                            <h4>赞助成员群（赞助¥50）</h4> <!-- 群名称 -->
+                            <h4>赞助成员群</h4> <!-- 群名称 -->
                             <p>安卓软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库app资源合集等。</p> <!-- 群内容说明 -->
                         </div>
                         <div class="list-content">
-                            <h4>普通频道交流群</h4>
+                            <h4>普通交流群</h4>
                             <p>纯交流社群，无资源分享!</p>
                         </div>
                         <div class="list-content">
