--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <span class="name"> tvbox订阅</span> <!-- 订阅名称 -->
                     <div class="status-and-link">
                         <span class="app-status">打开后复制网址使用</span> <!-- 订阅说明 -->
-                        <a href="https://gitee.com/KalvinMod/bin1site.gitee.io/raw/main/tvbox/OS.json"
+                        <a href="https://gh-proxy.com/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/tvbox/OS.json"
                             class="app-link">打开</a> <!-- 订阅链接 -->
                     </div>
                 </div>
