--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                     </div>
                 </div>
                 <!-- 代码分割线 -->
+                <div class="domain-status"> <!-- tvbox订阅块 -->
+                    <span class="name">Telegram频道</span> <!-- 订阅名称 -->
+                    <div class="status-and-link">
+                        <span class="app-status">需要科学上网</span> <!-- 订阅说明 -->
+                        <a href="https://t.me/CodeNoteShare" class="app-link">加入</a> <!-- 订阅链接 -->
+                    </div>
+                </div>
+                <!-- 代码分割线 -->
                 <div class="domain-status"> <!-- 邮箱联系块 -->
                     <span class="name">Email联系我</span> <!-- 联系方式名称 -->
                     <div class="status-and-link">
@@ -68,15 +76,7 @@
                     </div>
                 </div>
                 <!-- 代码分割线 -->
-                <!-- 代码分割线 -->
-                <div class="domain-status"> <!-- tvbox订阅块 -->
-                    <span class="name"> tvbox订阅</span> <!-- 订阅名称 -->
-                    <div class="status-and-link">
-                        <span class="app-status">打开后复制网址使用</span> <!-- 订阅说明 -->
-                        <a href="https://gh-proxy.com/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json"
-                            class="app-link">打开</a> <!-- 订阅链接 -->
-                    </div>
-                </div>
+
             </div>
             <!-- 代码分割线 -->
             <div class="content"> <!-- 交流群说明区域 -->
