--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
         <div class="card friend-link-card">
             <h2 class="section-title">友情链接</h2>
             <div class="link-list">
+                <a href="https://gh-proxy.com/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json" target="_blank" class="friend-link">
+                    <span>🔗Tvbox本站订阅</span>
+                </a>
                 <a href="https://www.microsoft.com/zh-cn/software-download/windows11" target="_blank"
                     class="friend-link">
                     <span>🔗Windows 11 官方下载</span>
