--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
             <div class="info-group">
                 <ul class="info-list">
                     <h3 class="info-text"> 1、加群说明：</h3>
-                    <p class="info-text">原创破解和收集花费大量时间精力，不为爱发电。</p>
+                    <p class="info-text">原创破解和收集花费大量时间，不为爱发电。</p>
                     <p class="info-text">加入频道第一时间公告，避免违规被踢出频道。</p>
                     <h3 class="info-text">2、赞助成员群：</h3>
-                    <p class="info-text">提供多类资源，包括安卓软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库app资源合集等；</p>
+                    <p class="info-text">安卓软件、Windows/Office密钥、教程资料等。</p>
                     <h3 class="info-text">3、普通交流群：</h3>
                     <p class="info-text">纯交流社群，无资源分享!</p>
                     <h3 class="info-text">4、VIP 群加入方法：</h3>
@@ -360,14 +360,14 @@
             <h2 class="section-title">友情链接</h2>
             <div class="link-list">
                 <a href="https://gh-proxy.com/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json" target="_blank" class="friend-link">
-                    <span>🔗Tvbox本站订阅</span>
+                    <span>🔗 Tvbox本站订阅</span>
                 </a>
                 <a href="https://www.microsoft.com/zh-cn/software-download/windows11" target="_blank"
                     class="friend-link">
-                    <span>🔗Windows 11 官方下载</span>
+                    <span>🔗 Windows 11 官方下载</span>
                 </a>
                 <a href="https://msdn.itellyou.cn" target="_blank" class="friend-link">
-                    <span>🔗MSDN 我告诉你！</span>
+                    <span>🔗 MSDN 我告诉你！</span>
                 </a>
             </div>
         </div>
