--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <p class="info-text">原创破解和收集花费大量时间，不为爱发电。</p>
                     <p class="info-text">加入频道第一时间公告，避免违规被踢出频道。</p>
                     <h3 class="info-text">2、赞助成员群：</h3>
-                    <p class="info-text">安卓软件、Windows/Office密钥、教程资料等。</p>
+                    <p class="info-text">安卓软件、Windows软件、Windows/Office密钥、教程资料等。</p>
                     <h3 class="info-text">3、普通交流群：</h3>
                     <p class="info-text">纯交流社群，无资源分享!</p>
                     <h3 class="info-text">4、VIP 群加入方法：</h3>
