--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <button class="btn btn-tencent" onclick="window.open('https://pd.qq.com/s/9oir7qw0g', '_blank')">
                 💬 Tencent 频道
             </button>
-            <button class="btn btn-telegram" onclick="window.open('https://t.me/CodeNoteShare', '_blank')">
+            <button class="btn btn-telegram" onclick="window.open('https://t.me/CostCodeNote', '_blank')">
                 🚀 Telegram 频道
             </button>
             <button class="btn btn-email" onclick="window.location.href='mailto:246822487@qq.com'">
